revert: remoção do método readOneWhoUnit da instância User
